objects/simpli_lv__List_View_Action__c.object
<CustomObject>
    <fields>
        <fullName>simpli_lv__Apex_Class_Name__c</fullName>
        <description>The apex class that this action calls. The apex class must implement the SimpliListViewsAction interface.</description>
        <inlineHelpText>The apex class that this action calls. The apex class must implement the SimpliListViewsAction interface.</inlineHelpText>
        <label>Apex Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Component_Name__c</fullName>
        <description>If the action is to be specific to an LWC component this holds that component name. If this field is blank then the action is available for all components.</description>
        <inlineHelpText>If the action is to be specific to an LWC component this holds that component name. If this field is blank then the action is available for all components.</inlineHelpText>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Flow_API_Name__c</fullName>
        <label>Flow API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Flow_Frame_Height__c</fullName>
        <label>Flow Frame Height</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Flow_Frame_Width__c</fullName>
        <label>Flow Frame Width</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Flow_Type__c</fullName>
        <label>Flow Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Autolaunched Flow</fullName>
                </value>
                <value>
                    <fullName>Screen Flow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simpli_lv__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Is_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Is_Hyperlink__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies whether this action is a hyperlink. If this is checked an action parameter named &quot;URL&quot; must exist identifying the location that the user is sent to.</description>
        <inlineHelpText>Identifies whether this action is a hyperlink. If this is checked an action parameter named &quot;URL&quot; must exist identifying the location that the user is sent to.</inlineHelpText>
        <label>Is Hyperlink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Label__c</fullName>
        <description>The label that is shown in the drop down action combobox on the list views page.</description>
        <inlineHelpText>The label that is shown in the drop down action combobox on the list views page.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Mass_Create_List_View_Name__c</fullName>
        <description>If this action is a Mass Create action then this field holds the list view containing the fields that will be presented to the user. This field is not required. If no value is used the list view the user is currently using will be used.</description>
        <inlineHelpText>If this action is a Mass Create action then this field holds the list view containing the fields that will be presented to the user. This field is not required. If no value is used the list view the user is currently using will be used.</inlineHelpText>
        <label>Mass Create List View Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Object_Type__c</fullName>
        <description>The API name of the object type that this action is associated with. If no type is specified the action is made available to all objects.</description>
        <inlineHelpText>The API name of the object type that this action is associated with. If no type is specified the action is made available to all objects.</inlineHelpText>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Permissions__c</fullName>
        <description>Identifies the permissions on the object that are required in order to complete the action. This is purely a hint to identify whether the actions should be displayed to the user on the page. It does not control object permissions.</description>
        <inlineHelpText>Identifies the permissions on the object that are required in order to complete the action. This is purely a hint to identify whether the actions should be displayed to the user on the page. It does not control object permissions.</inlineHelpText>
        <label>Permissions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simpli_lv__Primary_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The primary key of the action. This is a concatenation of the action object and the action label. This key is created when inserting an action and is used internally. Do not update this field manually.</description>
        <inlineHelpText>The primary key of the action. This is a concatenation of the action object and the action label. This key is created when inserting an action and is used internally. Do not update this field manually.</inlineHelpText>
        <label>Primary Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>simpli_lv__Selected_Record_Visibility__c</fullName>
        <defaultValue>&quot;Always displayed&quot;</defaultValue>
        <description>Indicates how many records need to be selected on a list view before the action becomes available.</description>
        <inlineHelpText>Indicates how many records need to be selected on a list view before the action becomes available.</inlineHelpText>
        <label>Selected Record Visibility</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Always displayed</fullName>
                </value>
                <value>
                    <fullName>Displayed if multiple records are selected</fullName>
                </value>
                <value>
                    <fullName>Displayed if no records are selected</fullName>
                </value>
                <value>
                    <fullName>Displayed if one or more records are selected</fullName>
                </value>
                <value>
                    <fullName>Displayed if one record is selected</fullName>
                </value>
                <value>
                    <fullName>Displayed if zero or one record is selected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>simpli_lv__Subtype__c</fullName>
        <description>Indicates whether the action should only be displayed for specific list view types.</description>
        <inlineHelpText>Indicates whether the action should only be displayed for specific list view types.</inlineHelpText>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Tooling</fullName>
                </value>
                <value>
                    <fullName>Metadata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>List View Action</label>
    <listViews>
        <fullName>simpli_lv__All</fullName>
        <columns>NAME</columns>
        <columns>simpli_lv__Label__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>simpli_lv__Selected_Record_Visibility__c</columns>
        <columns>simpli_lv__Apex_Class_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>simpli_lv__Object_Type__c</columns>
        <columns>simpli_lv__Is_Active__c</columns>
        <columns>simpli_lv__Is_Hyperlink__c</columns>
        <columns>simpli_lv__Permissions__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>simpli_lv__Primary_Key__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>simpli_lv__All_Custom_Actions</fullName>
        <columns>NAME</columns>
        <columns>simpli_lv__Label__c</columns>
        <columns>simpli_lv__Selected_Record_Visibility__c</columns>
        <columns>simpli_lv__Apex_Class_Name__c</columns>
        <columns>simpli_lv__Object_Type__c</columns>
        <columns>simpli_lv__Is_Active__c</columns>
        <columns>simpli_lv__Is_Hyperlink__c</columns>
        <columns>simpli_lv__Permissions__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>simpli_lv__Primary_Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>simpli_lv__List_View_Action__c.simpli_lv__Custom</value>
        </filters>
        <label>All Custom Actions</label>
    </listViews>
    <listViews>
        <fullName>simpli_lv__All_Is_Hyperlink</fullName>
        <columns>NAME</columns>
        <columns>simpli_lv__Label__c</columns>
        <columns>simpli_lv__Selected_Record_Visibility__c</columns>
        <columns>simpli_lv__Apex_Class_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>simpli_lv__Object_Type__c</columns>
        <columns>simpli_lv__Is_Active__c</columns>
        <columns>simpli_lv__Permissions__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>simpli_lv__Primary_Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>simpli_lv__Is_Hyperlink__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All - Is Hyperlink</label>
    </listViews>
    <listViews>
        <fullName>simpli_lv__All_Of_Type_Flow</fullName>
        <columns>NAME</columns>
        <columns>simpli_lv__Label__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>simpli_lv__Selected_Record_Visibility__c</columns>
        <columns>simpli_lv__Apex_Class_Name__c</columns>
        <columns>simpli_lv__Object_Type__c</columns>
        <columns>simpli_lv__Is_Active__c</columns>
        <columns>simpli_lv__Permissions__c</columns>
        <columns>simpli_lv__Flow_API_Name__c</columns>
        <columns>simpli_lv__Flow_Frame_Height__c</columns>
        <columns>simpli_lv__Flow_Frame_Width__c</columns>
        <columns>simpli_lv__Flow_Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>simpli_lv__Is_Flow__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Of Type Flow</label>
    </listViews>
    <listViews>
        <fullName>simpli_lv__All_Print_Actions</fullName>
        <columns>NAME</columns>
        <columns>simpli_lv__Label__c</columns>
        <columns>simpli_lv__Selected_Record_Visibility__c</columns>
        <columns>simpli_lv__Apex_Class_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>simpli_lv__Object_Type__c</columns>
        <columns>simpli_lv__Is_Active__c</columns>
        <columns>simpli_lv__Is_Hyperlink__c</columns>
        <columns>simpli_lv__Permissions__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>simpli_lv__Primary_Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>simpli_lv__Apex_Class_Name__c</field>
            <operation>equals</operation>
            <value>ListViewActionPDF</value>
        </filters>
        <label>All Print Actions</label>
    </listViews>
    <nameField>
        <displayFormat>LVA-{0}</displayFormat>
        <label>List View Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List View Actions</pluralLabel>
    <recordTypes>
        <fullName>simpli_lv__Core</fullName>
        <active>true</active>
        <description>Indicates the action is for SFDC core list views</description>
        <label>Core</label>
    </recordTypes>
    <recordTypes>
        <fullName>simpli_lv__Custom</fullName>
        <active>true</active>
        <description>Indicates the action is for custom list views</description>
        <label>Custom</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>